--- a/app/routes/home/profile.module.css
+++ b/app/routes/home/profile.module.css
@@ -65,6 +65,10 @@
   &[data-visible='true'] {
     opacity: 1;
   }
+
+  @media (--mediaTablet) {
+    white-space: normal;
+  }
 }
 
 .description {
